1. alter salary_employee columns: band_car_number and identity_card_number type; 2. validate identityCardNumber error

--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -94,7 +94,7 @@
             <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center" vtype="float">卡号
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="identityCardNumber" width="100" allowSort="false" headerAlign="center" vtype="float">身份证号码
+            <div field="identityCardNumber" width="100" allowSort="false" headerAlign="center">身份证号码
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="transportationAllowance" width="100" allowSort="false" headerAlign="center" vtype="float">交通补贴
