--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -59,25 +59,16 @@
             <div field="bonusCard" width="100" headerAlign="center" allowSort="true" vtype="float">提成（卡）
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="bonusCash" width="100" headerAlign="center" allowSort="true" vtype="float">提成（现金）
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
-            </div>
             <div field="performanceAppraisalCard" width="100" headerAlign="center" allowSort="true" vtype="float">绩效（卡）
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="performanceAppraisalCash" width="100" headerAlign="center" allowSort="true" vtype="float">绩效（现金）
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
-            </div>
-            <div field="otherSubsidy" width="100" headerAlign="center" allowSort="true" vtype="float">其他补贴
+            <div field="otherSubsidyCard" width="100" headerAlign="center" allowSort="true" vtype="float">其他补贴（卡）
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="charge" width="100" headerAlign="center" allowSort="true" vtype="float">扣款
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="chargeComments" width="100" headerAlign="center" allowSort="true">扣款说明
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
-            </div>
-            <div field="otherCharge" width="100" headerAlign="center" allowSort="true" vtype="float">其他扣款
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="exhibitionCharge" width="100" headerAlign="center" allowSort="true" vtype="float">会展扣款
@@ -104,6 +95,25 @@
             <div field="personalIncomeTax" width="100" headerAlign="center" allowSort="true">个人所得税
             </div>
             <div field="afterTaxSalary" width="100" headerAlign="center" allowSort="true">实发工资（卡）
+            </div>
+
+            <div width="100" headerAlign="center" allowSort="true">
+            </div>
+
+            <div field="postAllowance" width="100" headerAlign="center" allowSort="true">岗位津贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="performanceAppraisalCash" width="100" headerAlign="center" allowSort="true" vtype="float">绩效（现金）
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="otherSubsidyCash" width="100" headerAlign="center" allowSort="true" vtype="float">其他补贴（现金）
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="bonusCash" width="100" headerAlign="center" allowSort="true" vtype="float">提成（现金）
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="otherCharge" width="100" headerAlign="center" allowSort="true" vtype="float">其他扣款
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="salaryCash" width="100" headerAlign="center" allowSort="true">实发工资（现金）
             </div>
