--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -100,9 +100,9 @@
             <div field="transportationAllowance" width="100" allowSort="false" headerAlign="center" vtype="float">交通补贴
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="postAllowance" width="100" allowSort="false" headerAlign="center" vtype="float">岗位津贴
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
-            </div>
+            <!--<div field="postAllowance" width="100" allowSort="false" headerAlign="center" vtype="float">岗位津贴-->
+            <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>-->
+            <!--</div>-->
             <div field="leaveDate" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="false">离职日期
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
