--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -64,6 +64,12 @@
             <div field="baseWage" width="100" allowSort="false" headerAlign="center" vtype="float"> 基本工资
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
+            <div field="medicalInsurance" width="100" headerAlign="center" allowSort="true" vtype="float">代扣社保
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="housingFund" width="100" headerAlign="center" allowSort="true" vtype="float">代扣公积金
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
             <div field="workingAgeSubsidy" width="100" headerAlign="center" allowSort="false" vtype="int">工龄
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
