--- a/src/main/webapp/dms/login.html
+++ b/src/main/webapp/dms/login.html
@@ -242,6 +242,16 @@
     }
 
 
+    var WinAlerts = window.alert;
+
+    window.alert = function (e) {
+        if (e != null && e.indexOf("miniui") > -1) {
+            //和谐了
+        } else {
+            WinAlerts(e);
+        }
+    };
+
 </script>
 
 
