--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -85,10 +85,10 @@
             <div field="grossPay" width="100" headerAlign="center" allowSort="true">应发工资（卡）
             </div>
             <div field="medicalInsurance" width="100" headerAlign="center" allowSort="true" vtype="float">代扣社保
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>-->
             </div>
             <div field="housingFund" width="100" headerAlign="center" allowSort="true" vtype="float">代扣公积金
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>-->
             </div>
             <div field="beforeTaxSalary" width="100" headerAlign="center" allowSort="true">税前工资
             </div>
