update storage charge issue

--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -119,7 +119,7 @@
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="charge" width="100" allowSort="false" headerAlign="center" vtype="float">扣款总额
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>-->
             </div>
         </div>
     </div>
