--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -80,15 +80,13 @@
             <div field="sickLeave" width="100" headerAlign="center" allowSort="true" vtype="float">病假
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="storageCharge" width="100" headerAlign="center" allowSort="true" vtype="float">保管
+            <div field="storage" width="100" headerAlign="center" allowSort="true" vtype="float">保管
             </div>
             <div field="grossPay" width="100" headerAlign="center" allowSort="true">应发工资（卡）
             </div>
             <div field="medicalInsurance" width="100" headerAlign="center" allowSort="true" vtype="float">代扣社保
-                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>-->
             </div>
             <div field="housingFund" width="100" headerAlign="center" allowSort="true" vtype="float">代扣公积金
-                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>-->
             </div>
             <div field="beforeTaxSalary" width="100" headerAlign="center" allowSort="true">税前工资
             </div>
