--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -81,6 +81,7 @@
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="storage" width="100" headerAlign="center" allowSort="true" vtype="float">保管
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="grossPay" width="100" headerAlign="center" allowSort="true">应发工资（卡）
             </div>
