add onEnter for filter

--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -47,7 +47,7 @@
             <div type="indexcolumn"></div>
             <div field="employeeName" width="100" headerAlign="center" allowSort="true">姓名
                 <input id="nameFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="100"
-                       onvaluechanged="onFilterChanged"/>
+                       onvaluechanged="onFilterChanged" onenter="onEnter"/>
             </div>
             <div field="attendance" width="100" type="comboboxcolumn" headerAlign="center" allowSort="false">考勤
                 <input property="editor" class="mini-combobox" style="width:100%;" textField="text" valueField="value"
@@ -193,6 +193,10 @@
         var employeeName = mini.get("nameFilter").getValue();
         var month = mini.get('combo1').getValue();
         grid.load({employeeName: employeeName, month: month});
+    }
+
+    function onEnter() {
+        onFilterChanged();
     }
 
     function onDrawSummaryCell(e) {
